objects/CN_Change_Request_Fields_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>CN_Change_Request_Field_Name__c</fullName>
        <label>Change Request Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Is_Interface_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Interface Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CN_Change_Request_Fields_Mapping</label>
    <pluralLabel>CN_Change_Request_Fields_Mapping</pluralLabel>
</CustomObject>